--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+ <div class="wrapper">
  <div class="image1">
  <div class="nav">
   <p id="white">
@@ -92,7 +93,8 @@ publish detailed information about their work and finances on their websites.
 </p>
 <div class="c1">
  <div class="c2">
-<a href="/form.html" class="now"><button id="donate">DONATE NOW </button></a>
+<a href="/form.html" target="_blank"
+class="now"><button id="donate">DONATE NOW </button></a>
 </div>
 </div>
 <br>
@@ -105,12 +107,13 @@ publish detailed information about their work and finances on their websites.
 <span class="all"><a href="https://www.linkedin.com/signup" target="_blank" class="fa fa-linkedin"></a></span>
 <span class="all"><a href="https://www.instagram.com/?hl=en" target="_blank" class="fa fa-instagram"></a></span>
 <span class="all"><a href="https://www.youtube.com/" target="_blank" class="fa fa-youtube"></a></span>
-<span class="all"><a href="https://www.google.com/" target="_blank" class="fa fa-google"></a></span>
+<!-- <span class="all"><a href="https://www.google.com/" target="_blank" class="fa fa-google"></a></span>
 <span class="all"><a href="https://www.snapchat.com/" target="_blank" class="fa fa-snapchat-ghost"></a></span>
 <span class="all"><a href="https://www.skype.com/en/" target="_blank" class="fa fa-skype"></a></span>
 </div>
-<br>
+<br> -->
 <div class="last"> <p id="last1"><span class="last2"> <a href="" class="link"> Copyright &copy; </a></span> <span class="last2"><a href="" class="link">  Privacy </a> </span>  <span class="last2"><a href="" class="link"> Terms of Use</a> </span></p> </div>
+</div>
 </div>
 </body>
 </html>
