--- a/pains.html
+++ b/pains.html
@@ -18,7 +18,7 @@
                 <p class="para">We are a non-government organisation that has been supporting Ukraine’s armed resistance since 2014. We provide Ukrainian soldiers and volunteers with non-lethal supplies to help them battle Russian <br> The experience of the war, the
                     established support network, flexibility and the ability to adapt to changing conditions and threats allow us to find the most optimal and effective support solutions.</p>
                 <br>
-                <a href="" class="link">Donate</a>
+                <a href="form.html" class="link">Donate</a>
             </div>
 
             <div class="org">
@@ -27,7 +27,7 @@
                     <br>UNHCR has stepped up our operations and capacity in Ukraine and neighbouring countries. We remain firmly committed to support all affected populations in Ukraine and countries in the region.<br>Your support can help ensure that
                     families from Ukraine forced to flee their homes are sheltered and safe.</p>
                 <br>
-                <a href="" class="link">Donate</a>
+                <a href="form.html" class="link">Donate</a>
             </div>
 
             <div class="org">
@@ -35,7 +35,7 @@
                 <p class="para">United Help Ukraine provides humanitarian aid to people in need in Ukraine, focusing on distributing clothing, medical supplies, and other basic materials to people impacted by the conflict with Russia (both past and present). They also
                     help rehabilitate wounded and traumatized soldiers.</p>
                 <br>
-                <a href="" class="link">Donate</a>
+                <a href="form.html" class="link">Donate</a>
             </div>
 
             <div class="org">
@@ -44,7 +44,7 @@
                     Ukraine Crisis Relief Fund by Global Giving sprung into action once Russia declared war on Ukraine earlier this week.
                 </p>
                 <br>
-                <a href="" class="link">Donate</a>
+                <a href="form.html" class="link">Donate</a>
             </div>
 
             <div class="org">
@@ -53,7 +53,7 @@
                     meeting with partners and local civil society organizations in Poland and Ukraine to assess capacity for responding to an increase of refugees and people in need," said the organization on its official website. "We will work to respond
                     where we are needed the most and with the services that are needed urgently. Whatever the needs are, we are preparing to meet them.”</p>
                 <br>
-                <a href="" class="link">Donate</a>
+                <a href="form.html" class="link">Donate</a>
             </div>
 
 
