--- a/form.html
+++ b/form.html
@@ -36,7 +36,7 @@
    <div class="pay">Payment Details</div>
    <div class=detail>
     <div class="input-box">
-     <span class="details del1">Card Number</span>
+     <span class="details del1">Card name</span>
      <input type="text" placeholder=" Ex: SHWETA SINGH" required>
     </div>
     <div class="input-box">
